# ha-aria

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TASK6_SUMMARY.md  gitleaks.toml  progress.txt  pyproject.toml  release-notes.md  requirements.txt  test_lag_features.py
.claude/: hookify.lint-before-commit.local.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  codety.yml  lint-fix.yml  megalinter.yml  release.yml  sonarcloud.yml
_archived/modules/: README.md  activity_labeler.py  online_learner.py  test_api_online.py  test_validation_labeler.py
_imported_engine/: CLAUDE.md  pyproject.toml
_imported_engine/docs/plans/: 2026-02-12-phase4-sequence-anomalies-hub-integration.md
_imported_engine/ha_intelligence/: cli.py
_imported_engine/ha_intelligence/analysis/: baselines.py  correlations.py  occupancy.py  power_profiles.py  reliability.py
_imported_engine/ha_intelligence/collectors/: __init__.py  extractors.py  ha_api.py  registry.py
_imported_engine/ha_intelligence/features/: time_features.py
_imported_engine/ha_intelligence/llm/: __init__.py  meta_learning.py
_imported_engine/ha_intelligence/models/: __init__.py  device_failure.py  gradient_boosting.py
_imported_engine/ha_intelligence/predictions/: scoring.py
_imported_engine/ha_intelligence/storage/: __init__.py  data_store.py
_imported_engine/tests/: test_automation_suggestions.py  test_drift.py  test_features.py  test_llm.py  test_models.py  test_power_profiles.py  test_prophet.py
aria/: __init__.py  capabilities.py  cli.py  schemas.py  watchdog.py
aria/automation/: __init__.py  action_builder.py  condition_builder.py  models.py  template_engine.py  validator.py
aria/dashboard/: README.md  __init__.py  routes.py
aria/engine/: attention_explainer.py  capabilities.py  cli.py  config.py  evaluation.py  fallback.py  hardware.py  online.py  schema.py  sequence.py  transfer.py  transfer_generator.py  tuning.py  validation.py  weight_tuner.py
aria/faces/: extractor.py  store.py
aria/hub/: __init__.py  api.py  audit.py  cache.py  config_defaults.py  constants.py  core.py  routes_faces.py  routes_module_config.py  validation_runner.py
aria/iw/: detector.py  discovery.py  models.py  store.py
aria/modules/: __init__.py  activity_labeler.py  activity_monitor.py  anomaly_gap.py  automation_generator.py  data_quality.py  discovery.py  intelligence.py  ml_engine.py  online_learner.py  orchestrator.py  pattern_recognition.py  patterns.py  presence.py  shadow_engine.py  trajectory_classifier.py  transfer_engine.py  unifi.py
aria/shared/: __init__.py  co_occurrence.py  constants.py  day_classifier.py  entity_graph.py  entity_health.py  event_store.py  segment_builder.py  shadow_comparison.py
dashboard/: __init__.py  routes.py
dashboard/static/: style.css
dashboard/templates/: automations.html  base.html  capabilities.html  discovery.html  patterns.html  predictions.html
docs/: 2026-02-12-ha-intelligence-v3-design.md  api-examples.md  api-reference.md  architecture-detailed.md  architecture.md  cli-reference.md  conventions-fix-all-issues.md  dashboard-components.md  deployment-migration.md  deployment.md  design-language.md  gotchas.md  ha-intelligence-engine.md  ha-intelligence-ml-design.md  home-assistant-claude-code-design.md  llm-guide-design-system.md  manifest.yml  pipeline-status.md  system-routing-map.md  user-guide.md
docs/archive/: README.md  TASK11_SUMMARY.md  prd-interactive-dashboard.md  prd.json  progress-2026-02-20.txt  test_feature_extraction.py  test_lag_features.py  test_orchestrator.py  test_training_dataset.py
docs/lessons/: 2026-02-28-agent-crashes-on-unhandled-network-exception-no-recovery.md  2026-02-28-agent-recursion-create-dir-calls-itself.md  2026-02-28-aiohttp-clienttimeout-zero-invalid-for-tls-handshake.md  2026-02-28-aiohttp-dns-resolver-churn-without-session.md  2026-02-28-aiohttp-hidden-automatic-retry-on-server-disconnect.md  2026-02-28-aiohttp-memory-leak-cyclic-references-exception-traceback.md  2026-02-28-aiohttp-total-timeout-does-not-cover-sock-read.md  2026-02-28-aiohttp-unclosed-connector-on-race-between-response-and-close.md  2026-02-28-aiohttp-websocket-send-not-cancellation-safe-with-compression.md  2026-02-28-api-error-vs-empty-data-indistinguishable.md  2026-02-28-async-signal-update-in-useeffect-invisible-to-act.md  2026-02-28-async-tool-deadlock-new-event-loop-in-thread.md  2026-02-28-async-transaction-task-identity-mismatch.md  2026-02-28-aware-naive-datetime-mix-silent-TypeError.md  2026-02-28-bearer-token-empty-string-unhandled-exception.md  2026-02-28-bigint-json-stringify-crash.md  2026-02-28-blocking-input-in-async-event-processor.md  2026-02-28-blocking-json-io-in-async-methods.md  (+215 more)
ha_intelligence/: __init__.py  config.py
hub/: api.py  cache.py  constants.py  core.py
modules/: discovery.py  intelligence.py  ml_engine.py  orchestrator.py  shadow_engine.py
scripts/: migrate_face_embeddings.py
systemd/: aria-check-drift.service  aria-check-drift.timer  aria-correlations.service  aria-correlations.timer  aria-full.service  aria-full.timer  aria-hub.service  aria-intraday.service  aria-intraday.timer  aria-meta-learn.service  aria-meta-learn.timer  aria-prophet.service  aria-prophet.timer  aria-retrain.service  aria-retrain.timer  aria-sequences.service  aria-sequences.timer  aria-snapshot.service  aria-snapshot.timer  aria-suggest-automations.service  aria-suggest-automations.timer  install.sh
tasks/: prd-phase1-event-store.md  prd-phase4-iw-framework.md  prd.json
tests/: conftest.py  test_analysis.py  test_cache_shadow.py  test_capabilities.py  test_cli.py  test_cli_audit.py  test_cli_automation.py  test_cli_organic_discovery.py  test_collectors.py  test_entity_correlations.py  test_intelligence.py  test_ml_training.py  test_occupancy.py  test_predictions.py  test_sequence_anomalies.py  test_shadow_engine.py  test_storage.py
(+417 files in other folders)
