[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-aria"
version = "2.0.0"
description = "ARIA — Adaptive Residence Intelligence Architecture for Home Assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Justin McFarland", email = "parthalon025@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "scikit-learn>=1.8.0",
    "numpy>=2.3.0",
    "scipy>=1.12.0",
    "pandas>=2.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "holidays>=0.40",
    "python-dateutil>=2.8.0",
    "aiomqtt>=2.0.0",
]

[project.optional-dependencies]
llm = ["ollama>=0.3.0"]
prophet = ["prophet", "cmdstanpy", "pandas", "matplotlib"]
ml-extra = [
    "lightgbm>=4.0.0",
    "mlxtend>=0.23.0",
    "river>=0.21.0",
    "shap>=0.45.0",
]
neural-prophet = ["neuralprophet>=0.8.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-timeout>=2.3.0", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/parthalon025/ha-aria"
Repository = "https://github.com/parthalon025/ha-aria"
Issues = "https://github.com/parthalon025/ha-aria/issues"
Documentation = "https://github.com/parthalon025/ha-aria/tree/main/docs"
Changelog = "https://github.com/parthalon025/ha-aria/blob/main/CHANGELOG.md"

[project.scripts]
aria = "aria.cli:main"

[tool.setuptools.packages.find]
include = ["aria*"]

[tool.setuptools.package-data]
"aria.dashboard.spa" = ["dist/**"]
"aria.dashboard" = ["templates/**", "static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "ollama: tests requiring a running Ollama instance (deselect with '-m not ollama')",
]
filterwarnings = [
    "ignore:X does not have valid feature names:UserWarning",
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C901", "PLR"]
ignore = ["PLR2004"]  # Magic value comparisons — inappropriate for ML thresholds and test assertions

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# FastAPI route registration functions inherently have high statement counts
# and cyclomatic complexity due to nested handler definitions — not refactorable
"aria/hub/api.py" = ["C901", "PLR0915"]

[tool.ruff.lint.pylint]
max-args = 5
max-returns = 6

[tool.ruff.format]
quote-style = "double"
